manifests/broker-lite-chart/templates/player-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: player
spec:
  type: ClusterIP
  ports:
    - name: "8083"
      port: 80
      targetPort: 8083
  selector:
    app: player
