manifests/broker-lite-chart/templates/rtsp-out-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtsp-out
spec:
  type: ClusterIP
  ports:
    - name: "8554"
      port: 8554
      targetPort: 8554
    - name: "1935"
      port: 1935
      targetPort: 1935
    - name: "8888"
      port: 8888
    #   targetPort: 8888
    # - name: "8889"
    #   port: 8889
    #   targetPort: 8889  
  selector:
    app: rtsp-out
---
# A HLS stream of the output - can be accessed via http.
apiVersion: v1
kind: Service
metadata:
  name: rtsp-out-external
spec:
  type: LoadBalancer
  ports:
    - name: "8888"
      port: 80
      targetPort: 8888
    # - name: "8889"
    #   port: 8889
    #   targetPort: 8889  
  selector:
    app: rtsp-out
