manifests/broker-lite-chart/templates/rtsp-source-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rtsp-source
spec:
  type: ClusterIP
  ports:
    - name: "8554"
      port: 8554
      targetPort: 8554
    - name: "1935"
      port: 1935
      targetPort: 1935
    # - name: "8888"
    #   port: 8888
    #   targetPort: 8888
    # - name: "8889"
    #   port: 8889
    #   targetPort: 8889  
  selector:
    app: rtsp-source
